ecmascript/parser/tests/jsx/errors/unterminated-string/input.js.stderr
error: Unterminated string constant
 --> $DIR/tests/jsx/errors/unterminated-string/input.js:1:10
  |
1 | <foo bar="
  |          ^

